--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,28 +12,317 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$angular-30x30-3b-class-schedule-primary: mat.define-palette(mat.$indigo-palette);
-$angular-30x30-3b-class-schedule-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$Angular-30x30-2-Scheduler-primary: mat.define-palette(mat.$deep-purple-palette);
+$Angular-30x30-2-Scheduler-accent: mat.define-palette(mat.$green-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$angular-30x30-3b-class-schedule-warn: mat.define-palette(mat.$red-palette);
+$Angular-30x30-2-Scheduler-warn: mat.define-palette(mat.$yellow-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$angular-30x30-3b-class-schedule-theme: mat.define-light-theme((
+$Angular-30x30-2-Scheduler-theme: mat.define-light-theme((
   color: (
-    primary: $angular-30x30-3b-class-schedule-primary,
-    accent: $angular-30x30-3b-class-schedule-accent,
-    warn: $angular-30x30-3b-class-schedule-warn,
+    primary: $Angular-30x30-2-Scheduler-primary,
+    accent: $Angular-30x30-2-Scheduler-accent,
+    warn: $Angular-30x30-2-Scheduler-warn,
   )
 ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($angular-30x30-3b-class-schedule-theme);
+@include mat.all-component-themes($Angular-30x30-2-Scheduler-theme);
 
 /* You can add global styles to this file, and also import other style files */
+
+html {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, sans-serif;
+  height: 100%;
+  display: flex;
+}
+
+p {
+  margin: 16px;
+}
+
+.icon-20 {
+  font-size: 20px;
+}
+
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.container {
+  margin: 10px;
+  flex-wrap: wrap;
+}
+
+.container [class*='col'] {
+  padding: 10px;
+  flex: 1;
+}
+
+.mat-card-header-text {
+  margin-left: 0;
+  border-bottom: 1px solid #ffd740;
+}
+
+.header {
+  padding-bottom: 10px;
+  color: #673ab7;
+  border-bottom: 2px solid #673ab7;
+}
+
+app-root {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+mat-toolbar {
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+    0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+  z-index: 1;
+  font-size: x-large;
+}
+
+mat-sidenav {
+  box-shadow: 3px 0 6px rgba(0, 0, 0, 0.24);
+  width: 200px;
+  padding-top: 10px;
+}
+
+mat-card:not(.dashboard-card) {
+  margin-bottom: 20px;
+}
+
+button {
+  vertical-align: middle;
+  width: 150px;
+}
+
+.mat-sidenav-container {
+  background-color: #efefef;
+  flex: 1;
+}
+
+.fill-remaining-space {
+  flex: 1 1 auto;
+}
+
+.full-width {
+  width: 100%;
+  margin-bottom: 5%;
+}
+
+.mat-form-field--inline {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 15%;
+}
+
+.mat-form-field--inline .mat-form-field {
+  display: inline-block;
+  width: 100%;
+  vertical-align: middle;
+}
+
+.mat-form-field--inline .mat-form-field:nth-child(1) {
+  margin-right: 10px;
+}
+
+.main-containers {
+  display: flex;
+  justify-content: space-around;
+
+  .main-list {
+    width: 49%;
+  }
+
+  .main-two-details {
+    width: 49%;
+    height: 100%;
+  }
+}
+mat-list-item:not(:first-of-type) {
+  border-top: 1px solid #efefef;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+mat-list-item:hover {
+  cursor: pointer;
+}
+
+.symbol {
+  color: #777;
+}
+
+mat-card-actions {
+  margin-bottom: 0;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.nav-link {
+  color: rgba(0, 0, 0, 0.54);
+  display: flex !important;
+  align-items: center;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+mat-card {
+  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+    0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+
+  mat-card-header {
+    margin-bottom: 10px;
+  }
+
+  mat-form-field {
+    width: 100%;
+  }
+}
+
+.ig-xpro2 {
+  -webkit-filter: contrast(1.3) brightness(0.8) sepia(0.3) saturate(1.5) hue-rotate(-20deg);
+  filter: contrast(1.3) brightness(0.8) sepia(0.3) saturate(1.5) hue-rotate(-20deg);
+}
+
+.ig-willow {
+  -webkit-filter: saturate(0.02) contrast(0.85) brightness(1.2) sepia(0.02);
+  filter: saturate(0.02) contrast(0.85) brightness(1.2) sepia(0.02);
+}
+
+.ig-walden {
+  -webkit-filter: sepia(0.35) contrast(0.9) brightness(1.1) hue-rotate(-10deg) saturate(1.5);
+  filter: sepia(0.35) contrast(0.9) brightness(1.1) hue-rotate(-10deg) saturate(1.5);
+}
+
+.ig-valencia {
+  -webkit-filter: sepia(0.15) saturate(1.5) contrast(0.9);
+  filter: sepia(0.15) saturate(1.5) contrast(0.9);
+}
+
+.ig-toaster {
+  -webkit-filter: sepia(0.4) saturate(2.5) hue-rotate(-30deg) contrast(0.67);
+  -filter: sepia(0.4) saturate(2.5) hue-rotate(-30deg) contrast(0.67);
+}
+
+.ig-sutro {
+  -webkit-filter: brightness(0.75) contrast(1.3) sepia(0.5) hue-rotate(-25deg);
+  filter: brightness(0.75) contrast(1.3) sepia(0.5) hue-rotate(-25deg);
+}
+
+.ig-sierra {
+  -webkit-filter: contrast(0.8) saturate(1.2) sepia(0.15);
+  filter: contrast(0.8) saturate(1.2) sepia(0.15);
+}
+
+.ig-rise {
+  -webkit-filter: saturate(1.4) sepia(0.25) hue-rotate(-15deg) contrast(0.8) brightness(1.1);
+  filter: saturate(1.4) sepia(0.25) hue-rotate(-15deg) contrast(0.8) brightness(1.1);
+}
+
+.ig-nashville {
+  -webkit-filter: sepia(0.4) saturate(1.5) contrast(0.9) brightness(1.1) hue-rotate(-15deg);
+  filter: sepia(0.4) saturate(1.5) contrast(0.9) brightness(1.1) hue-rotate(-15deg);
+}
+
+.ig-mayfair {
+  -webkit-filter: saturate(1.4) contrast(1.1);
+  filter: saturate(1.4) contrast(1.1);
+}
+
+.ig-lofi {
+  filter: contrast(1.4) brightness(0.9) sepia(0.05);
+  -webkit-filter: contrast(1.4) brightness(0.9) sepia(0.05);
+}
+
+.ig-kelvin {
+  filter: sepia(0.4) saturate(2.4) brightness(1.3) contrast(1);
+  -webkit-filter: sepia(0.4) saturate(2.4) brightness(1.3) contrast(1);
+}
+
+.ig-inkwell {
+  -webkit-filter: grayscale(1) brightness(1.2) contrast(1.05);
+  filter: grayscale(1) brightness(1.2) contrast(1.05);
+}
+
+.ig-hudson {
+  -webkit-filter: contrast(1.2) brightness(0.9) hue-rotate(-10deg);
+  filter: contrast(1.2) brightness(0.9) hue-rotate(-10deg);
+}
+
+.hefe {
+  -webkit-filter: contrast(1.3) sepia(0.3) saturate(1.3) hue-rotate(-10deg) brightness(0.95);
+  filter: contrast(1.3) sepia(0.3) saturate(1.3) hue-rotate(-10deg) brightness(0.95);
+}
+
+.ig-earlybird {
+  -webkit-filter: sepia(0.4) saturate(1.6) contrast(1.1) brightness(0.9) hue-rotate(-10deg);
+  filter: sepia(0.4) saturate(1.6) contrast(1.1) brightness(0.9) hue-rotate(-10deg);
+}
+
+.ig-brannan {
+  -webkit-filter: sepia(0.5) contrast(1.4);
+  filter: sepia(0.5) contrast(1.4);
+}
+
+.ig-amaro {
+  -webkit-filter: hue-rotate(-10deg) contrast(0.9) brightness(1.1) saturate(1.5);
+  filter: hue-rotate(-10deg) contrast(0.9) brightness(1.1) saturate(1.5);
+}
+
+.ig-1977 {
+  -webkit-filter: sepia(0.5) hue-rotate(-30deg) saturate(1.2) contrast(0.8);
+  filter: sepia(0.5) hue-rotate(-30deg) saturate(1.2) contrast(0.8);
+}
+
+
+// UI TOOLBAR
+mat-toolbar {
+box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+  0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+z-index: 900;
+
+>.mat-mini-fab {
+  margin-right: 10px;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
+
+.title {
+  vertical-align: middle;
+  margin-left: 2%;
+}
+
+.logo {
+  margin-left: 20px;
+
+  img {
+    vertical-align: middle;
+    width: 100px;
+    height: auto;
+  }
+}
+}
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
